# shopper-ai

./: .gitignore
backend/: docker-compose.yml  manage.py  pyproject.toml
backend/orders/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_order_product_urls_size.py  0003_remove_order_product_url.py
backend/orders/services/: buy_with_browser_use.py  buy_with_playwright.py
backend/shopper_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: data.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Cart.css  Cart.jsx  CheckoutModal.css  CheckoutModal.jsx  SwipeCard.css  SwipeCard.jsx
